# langchain-crash-course

./: .env.example  main.py  pyproject.toml  test
1_chat_models/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  3_chat_model_alternatives.py  4_chat_model_conversation_with_user.py  5_chat_model_save_message_history_redis.py
2_prompt_templates/: 2_prompt_template_with_chat_model.py
3_chains/: 1_chains_basics.py  2_chains_under_the_hood.py  3_chains_extended.py  4_chains_parallel.py  5_chains_branching.py
4_rag/: 6_rag_one_off_question.py  7_rag_conversational.py
5_agents_and_tools/: 1_agent_and_tools_basics.py
5_agents_and_tools/agent_deep_dive/: 1_agent_react_chat.py  2_agent_react_docstore.py
5_agents_and_tools/tools_deep_dive/: 1_tool_constructor.py  2_tool_decorator.py  3_tool_base_tool.py
6_tool_calling/: 1_tool_calling_in_langchain.py  2_tool_calling_with_history.py
langchain_day_1/1_chat_models/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  3_chat_model_alternatives.py  4_chat_model_conversation_with_user.py  5_chat_model_save_message_history_redis.py
langchain_day_1/2_prompt_templates/: 1_prompt_template_basic.py  2_prompt_template_with_chat_model.py
langchain_day_1/3_chains/: 1_chains_basics.py  2_chains_under_the_hood.py
notebooks/: chat-memory.ipynb  run_parallel.ipynb  tool_calls.ipynb
